--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 <body>
     <main>
-        <header></header>
+        <header>
+            <h1>Cursos Grátis</h1>
+        </header>
     </main>
-    <article></article>
+    <article>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime a tempora quidem nam libero cupiditate aliquid, unde sequi quas quasi mollitia illo? Ab sequi ut iste ad, harum debitis reprehenderit.</p>
+    </article>
+    <article>
+        <h2>Curso de Javascript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laudantium ad debitis cupiditate illo quo, vel saepe voluptatum! Vitae perferendis neque voluptatem ea explicabo culpa quas inventore fuga totam architecto.</p>
+    </article>
     
 </body>
 </html>
